<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_discovery" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_journal"
        android:icon="@drawable/ic_journal_book_24"
        android:title="@string/title_journal" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_maps_location_black_24"
        android:title="@string/title_maps" />

</menu>