<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discovery">

    <fragment
        android:id="@+id/navigation_discovery"
        android:name="com.pdm.meetgroups.view.navbar.discovery.DiscoveryFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_discovery" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.pdm.meetgroups.view.navbar.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.pdm.meetgroups.view.navbar.journal.JournalFragment"
        android:label="@string/journal_navigation"
        tools:layout="@layout/fragment_journal" >
    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.pdm.meetgroups.view.navbar.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_not_in_journal"
        android:name="com.pdm.meetgroups.view.navbar.journal.JournalFragment"
        android:label="NotInJournal"
        tools:layout="@layout/fragment_not_in_journal" />
</navigation>
