<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.EditJournalActivity"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/roundImageView"
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp"
                android:clickable="true">
                <ImageView
                    android:id="@+id/imv_edit_journal_journalphoto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />
                <TextView
                    android:id="@+id/tv_edit_journal_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/change_image"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <EditText
                android:id="@+id/et_edit_journal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:layout_weight="4"/>

            <ImageButton
                android:id="@+id/btn_edit_journal_confirm_title_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/custom_button"
                android:backgroundTintMode="add"
                android:src="@drawable/ic_done_24" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_edit_journal_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btn_edit_journal_add_participant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_participant" />

        <Button
            android:id="@+id/btn_edit_journal_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/close_journal"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</ScrollView>